fix jupyter notebook

--- a/tvMarketMonitoring.ipynb
+++ b/tvMarketMonitoring.ipynb
@@ -148,8 +148,23 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DVB-T2 40\n",
+      "DVB-T 266\n",
+      "HEVC 1\n",
+      "DVB-T2 HEVC 0\n"
+     ]
+    }
+   ],
    "source": [
     "shop=\"kijiji.it\"\n",
     "selector=\"body > div.content.left-rail.srp > div.main-container > div.main > div.srp-hed > div > h2\"\n",
@@ -531,9 +546,7 @@
     "    for i in data.shop.unique():\n",
     "\n",
     "        print str(j).split(\"T\")[0]\n",
-    "        print data[(data[\"shop\"]==i) & (data[\"date\"]==j)][[\"shop\",\"keyword\",\"risultato\"]]\n",
-    "    \n",
-    "    \n"
+    "        print data[(data[\"shop\"]==i) & (data[\"date\"]==j)][[\"shop\",\"keyword\",\"risultato\"]]"
    ]
   },
   {
