mongodb export function

--- a/tvMarketMonitoring.ipynb
+++ b/tvMarketMonitoring.ipynb
@@ -614,6 +614,13 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "##### mongodump --db MonitoraggioTV --out=dbDump/"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
