Aggiunti grafici stacked barmode

--- a/tvMarketMonitoring.ipynb
+++ b/tvMarketMonitoring.ipynb
@@ -149,22 +149,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DVB-T2 41\n",
-      "DVB-T 274\n",
-      "HEVC 2\n",
-      "DVB-T2 HEVC 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "shop=\"kijiji.it\"\n",
     "selector=\"body > div.content.left-rail.srp > div.main-container > div.main > div.srp-hed > div > h2\"\n",
@@ -195,22 +184,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DVB-T 88\n",
-      "DVB-T2 81\n",
-      "HEVC 35\n",
-      "DVB-T2 HEVC 21\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "shop=\"PREZZOFORTE\"\n",
     "selector=\"#col_prodotti_numero > span.lista_prodotti_numero_prodotti\"\n",
@@ -241,22 +219,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DVB-T2 192\n",
-      "DVB-T 2\n",
-      "DVB-T2 HEVC 185\n",
-      "HEVC 187\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "selector=\"#productList > div:nth-of-type(1) > section > div > b\"\n",
     "shop=\"EURONICS\"\n",
@@ -287,22 +254,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'date': '04/12/17', 'url': 'https://it.aliexpress.com/wholesale?spm=a2g0y.search0104.1.1.kasRbE&SearchText=dvb-t2', 'shop': 'Aliexpress', 'keyword': 'DVB-T2', 'risultato': u'2,006'}\n",
-      "{'shop': 'Aliexpress', 'date': '04/12/17', 'keyword': 'DVB-T', 'url': 'https://it.aliexpress.com/wholesale?catId=0&SearchText=dvb-t', 'risultato': u'3,422'}\n",
-      "{'shop': 'Aliexpress', 'date': '04/12/17', 'keyword': 'DVB-T2 HEVC', 'url': 'https://it.aliexpress.com/wholesale?catId=0&initiative_id=SB_20171129054255&SearchText=dvb-t2++hevc', 'risultato': u'45'}\n",
-      "{'shop': 'Aliexpress', 'date': '04/12/17', 'keyword': 'HEVC', 'url': 'https://it.aliexpress.com/wholesale?catId=0&SearchText=hevc', 'risultato': u'382'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "url=\"https://it.aliexpress.com/wholesale?spm=a2g0y.search0104.1.1.kasRbE&SearchText=dvb-t2\"\n",
     "r  = requests.get(url)\n",
@@ -389,22 +345,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DVB-T2 183\n",
-      "HEVC 88\n",
-      "DVB-T 293\n",
-      "DVB-T2 HEVC 53\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "url=\"https://www.subito.it/annunci-italia/vendita/audio-video/?q=dvb-t2\"\n",
     "selector='#template_content > main > div.subcontent > div.main > div.listing > ul.list_link.large > li:nth-of-type(1)'\n",
@@ -435,21 +380,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "HEVC 35\n",
-      "DVB-T 179\n",
-      "DVB-T2 825\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "shop=\"eprice.it\"\n",
     "selector='#breadcrumb > span.numRes'\n",
@@ -469,28 +404,24 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
-    "list(posts.remove({ \"shop\": \"Aliexpress\" }))"
+    "#list(posts.remove({ \"shop\": \"Aliexpress\" }))\n",
+    "list(posts.remove({ \"keyword\": \"Tutti televisori\" }))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2017-12-04T15:42:49.658+0100\twriting MonitoraggioTV.posts to \r\n",
-      "2017-12-04T15:42:49.659+0100\tdone dumping MonitoraggioTV.posts (55 documents)\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!mongodump --db MonitoraggioTV --out=dbDump/\n",
     "import pandas as pd\n",
@@ -514,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -526,40 +457,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[170  84 291  48 173  86 292  50 183  88 293  53]\n",
-      "[2017 3439   45  414 2017 3437   45  401 2006 3422   45  382]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x11314ba10>"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYAAAAD8CAYAAAB+UHOxAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAHyBJREFUeJzt3X+QVOWd7/H3J8NERo07KiSBwQ0kARMUMyQNccNWlsEs\nkGgCaxIlrkqMdclVY9TaxcVUkRjRBTWrd42utSSyaHT5UahAGW+QAK6luyrDDwXCsnDxBzOQgOCQ\niJjo8L1/9BmcgWGm51d30+fzqprq7m8/p/s583SdT5/TT/dRRGBmZunzgUJ3wMzMCsMBYGaWUg4A\nM7OUcgCYmaWUA8DMLKUcAGZmKeUAMDNLKQeAmVlKOQDMzFKqV6E70JY+ffrEwIEDC90NM7Pjypo1\na96IiL7ttSvqABg4cCC1tbWF7oaZ2XFF0mu5tPMhIDOzlGo3ACT1lvSipJckbZL046Q+V9IrktYn\nf9VJXZLukbRN0suSPtvssSZL2pr8Te651TIzs/bkcgjoj8CYiHhLUjnwrKT/m9w3NSIWHdH+y8Dg\n5O/zwP3A5yWdBvwIyAABrJG0NCLe7I4VMTOzjml3DyCy3kpulid/bf2G9ATgoWS554FKSf2AccDy\niNiXbPSXA+O71n0zM+usnD4DkFQmaT2wm+xG/IXkrtuSwzx3SzohqVUBO5otXpfUjlU3M7MCyGkW\nUEQ0AtWSKoHHJZ0N3AT8FvggMBv4B+AWQK09RBv1FiRNAaYA/Pmf/3ku3etWi9fVc+eyLexsOEj/\nygqmjjuTicOdU6XG42zWwVlAEdEAPA2Mj4hdyWGePwL/BoxMmtUBZzRbbACws436kc8xOyIyEZHp\n27fdaazdavG6em56bAP1DQcJoL7hIDc9toHF6+rz2g/rWR7ndFi8rp5Rs1YyaNovGTVrpce3FbnM\nAuqbvPNHUgXwJeC/k+P6SBIwEdiYLLIUuDyZDXQusD8idgHLgLGSTpV0KjA2qRWNO5dt4eC7jS1q\nB99t5M5lWwrUI+sJHufS55DPTS6HgPoBD0oqIxsYCyPiCUkrJfUle2hnPfC/k/ZPAl8BtgFvA1cA\nRMQ+STOA1Um7WyJiX/etStftbDjYobodnzzOpa+tkPehvve1GwAR8TIwvJX6mGO0D+CaY9w3B5jT\nwT7mTf/KCupb2Qj0r6woQG+sp3icS59DPjf+JnAzU8edSUV5WYtaRXkZU8edWaAeWU/wOJe+Y4W5\nQ74lB0AzE4dXMfPCYVRVViCgqrKCmRcO8y5jifE4lz6HfG6UPWJTnDKZTPjH4MysM9I81VfSmojI\ntNeuqH8N1MyssyYOr0rNBr+zfAjIzCylHABmZinlADAzSykHgJlZSjkAzMxSygFgZpZSDgAzs5Ry\nAJiZpZQDwMwspRwAZmYp5QAwM0spB4CZWUo5AMzMUsoBYGaWUg4AM7OUcgCYmaVUuwEgqbekFyW9\nJGmTpB8n9UGSXpC0VdICSR9M6ickt7cl9w9s9lg3JfUtksb11EqZmVn7ctkD+CMwJiI+A1QD4yWd\nC9wO3B0Rg4E3gSuT9lcCb0bEJ4G7k3ZIGgpMAs4CxgP/IqnlSTvNzCxv2g2AyHoruVme/AUwBliU\n1B8EJibXJyS3Se4/T5KS+vyI+GNEvAJsA0Z2y1qYmVmH5fQZgKQySeuB3cBy4P8BDRHxXtKkDmg6\n+WYVsAMguX8/cHrzeivLmJlZnuUUABHRGBHVwACy79o/3Vqz5FLHuO9Y9RYkTZFUK6l2z549uXTP\nzMw6oUOzgCKiAXgaOBeolNQruWsAsDO5XgecAZDc/2fAvub1VpZp/hyzIyITEZm+fft2pHtmZtYB\nucwC6iupMrleAXwJ2AysAr6RNJsMLEmuL01uk9y/MiIiqU9KZgkNAgYDL3bXipiZWcf0ar8J/YAH\nkxk7HwAWRsQTkn4DzJd0K7AOeCBp/wDwC0nbyL7znwQQEZskLQR+A7wHXBMRjd27OmZmlitl35wX\np0wmE7W1tYXuhpnZcUXSmojItNfO3wQ2M0spB4CZWUo5AMzMUsoBYGaWUg4AM7OUcgCYmaWUA8DM\nLKUcAGZmKeUAMDNLKQeAmVlKOQDMzFLKAWBmllIOADOzlHIAmJmllAPAzCylHABmZinlADAzSykH\ngJlZSjkAzMxSygFgZpZS7QaApDMkrZK0WdImSdcl9Zsl1Utan/x9pdkyN0naJmmLpHHN6uOT2jZJ\n03pmlczMLBe9cmjzHvB3EbFW0oeANZKWJ/fdHRE/ad5Y0lBgEnAW0B/4taQhyd33AX8N1AGrJS2N\niN90x4qYmVnHtBsAEbEL2JVc/4OkzUBVG4tMAOZHxB+BVyRtA0Ym922LiO0AkuYnbR0AZmYF0KHP\nACQNBIYDLySl70l6WdIcSacmtSpgR7PF6pLasepmZlYAOQeApJOBR4HrI+L3wP3AJ4BqsnsI/9TU\ntJXFo436kc8zRVKtpNo9e/bk2j0zM+ugnAJAUjnZjf8jEfEYQET8LiIaI+IQ8DPeP8xTB5zRbPEB\nwM426i1ExOyIyEREpm/fvh1dHzMzy1Eus4AEPABsjoi7mtX7NWv2N8DG5PpSYJKkEyQNAgYDLwKr\ngcGSBkn6INkPipd2z2qYmVlH5TILaBRwGbBB0vqk9gPgW5KqyR7GeRX4LkBEbJK0kOyHu+8B10RE\nI4Ck7wHLgDJgTkRs6sZ1MTOzDlDEUYfhi0Ymk4na2tpCd8PM7LgiaU1EZNpr528Cm5mllAPAzCyl\nHABmZinlADAzSykHgJlZSjkAzMxSygFgZpZSDgAzs5RyAJiZpZQDwMwspRwAZmYp5QAwM0spB4CZ\nWUo5AMzMUsoBYGaWUg4AM7OUcgCYmaWUA8DMLKUcAGZmKeUAMDNLqXYDQNIZklZJ2ixpk6Trkvpp\nkpZL2ppcnprUJekeSdskvSzps80ea3LSfqukye0994b6/YyatZLF6+q7so5WpBavq2fUrJUMmvZL\nj7NZAfTKoc17wN9FxFpJHwLWSFoOfBtYERGzJE0DpgH/AHwZGJz8fR64H/i8pNOAHwEZIJLHWRoR\nb7b15PUNB7npsQ0ATBxe1YlVtGK0eF09Nz22gYPvNgIe51K2eF09dy7bws6Gg/SvrGDquDM9xkWi\n3T2AiNgVEWuT638ANgNVwATgwaTZg8DE5PoE4KHIeh6olNQPGAcsj4h9yUZ/OTA+l04efLeRO5dt\n6cBqWbG7c9mWwxv/Jh7n0tMU9PUNBwneD3rv7RWHXPYADpM0EBgOvAB8JCJ2QTYkJH04aVYF7Gi2\nWF1SO1Y9JzsbDgLw7rvvUldXxzvvvNORrlsOevfuzYABAygvL+/x52oaz1zrdnxqK+i9F1B4OQeA\npJOBR4HrI+L3ko7ZtJVatFE/8nmmAFMAPvjRTx6u96+sAKCuro4PfehDDBw4kDb6YB0UEezdu5e6\nujoGDRrU48/Xv7KC+lY29k3jbKXBQV/ccpoFJKmc7Mb/kYh4LCn/Ljm0Q3K5O6nXAWc0W3wAsLON\negsRMTsiMhGRaapVlJcxddyZALzzzjucfvrp3vh3M0mcfvrpeduzmjruTCrKy1rUmo+zlYZjBbqD\nvjjkMgtIwAPA5oi4q9ldS4GmmTyTgSXN6pcns4HOBfYnh4qWAWMlnZrMGBqb1NpUVVnBzAuHtdhd\n9Ma/Z+Tz/zpxeBUzLxxGVWUFovVxtuOfg7645XIIaBRwGbBB0vqk9gNgFrBQ0pXA68A3k/ueBL4C\nbAPeBq4AiIh9kmYAq5N2t0TEvraeeFjVn/HctDEdWJ38evzxx7nwwgvZvHkzn/rUp3j11Ve54IIL\n2LhxI7W1tTz00EPcc889he5m0Zo4vMob/BLXNL6eBVSc2g2AiHiW1o/fA5zXSvsArjnGY80B5nSk\ng13Vk1PQ5s2bx1/+5V8yf/58br755hb3ZTIZMplM6wt2g8bGRsrKytpvaFZgDvriVdLfBO7JKWhv\nvfUWzz33HA888ADz588/6v6nn36aCy64AIADBw7wne98hxEjRjB8+HCWLMkeLbvrrrv4zne+A8CG\nDRs4++yzefvtt7n55pu57LLLGDNmDIMHD+ZnP/vZ4cesqanhkksuYdiwYQA8/PDDjBw5kurqar77\n3e/S2NhIY2Mj3/72tzn77LMZNmwYd999NwD33HMPQ4cO5ZxzzmHSpEld/h+Y2fGtQ9NAjzc9OQVt\n8eLFjB8/niFDhnDaaaexdu1aTjvttFbb3nbbbYwZM4Y5c+bQ0NDAyJEj+dKXvsT111/P6NGjefzx\nx7ntttv413/9V0488UQAXn75ZZ5//nkOHDjA8OHDOf/88wF48cUX2bhxI4MGDWLz5s0sWLCA5557\njvLycq6++moeeeQRzjrrLOrr69m4cSMADQ0NAMyaNYtXXnmFE0444XDNzNKrpPcAenIK2rx58w6/\ni540aRLz5s07ZtunnnqKWbNmUV1dzejRo3nnnXd4/fXX+cAHPsDcuXO57LLL+Ku/+itGjRp1eJkJ\nEyZQUVFBnz59qKmp4cUXXwRg5MiRh6dprlixgjVr1jBixAiqq6tZsWIF27dv5+Mf/zjbt2/n2muv\n5Ve/+hWnnHIKAOeccw5/+7d/y8MPP0yvXiWd/WaWg5LeCvTUXPO9e/eycuVKNm7ciCQaGxuRxNVX\nX91q+4jg0Ucf5cwzj575sHXrVk4++WR27mw5I/bIGTlNt0866aQWjzt58mRmzpx51OO+9NJLLFu2\njPvuu4+FCxcyZ84cfvnLX/LMM8+wdOlSZsyYwaZNmxwEZilW0nsAPTUFbdGiRVx++eW89tprvPrq\nq+zYsYNBgwZRV1fXavtx48bx05/+lOzn47Bu3ToA9u/fz3XXXcczzzzD3r17WbRo0eFllixZwjvv\nvMPevXt5+umnGTFixFGPe95557Fo0SJ2785+BWPfvn289tprvPHGGxw6dIivf/3rzJgxg7Vr13Lo\n0CF27NhBTU0Nd9xxBw0NDbz11ltd+j+Y2fGtpN/+9dQUtHnz5jFt2rQWta9//ev84z/+Y6vtp0+f\nzvXXX88555xDRDBw4ECeeOIJbrjhBq6++mqGDBnCAw88QE1NDV/84heB7KGe888/n9dff53p06fT\nv39//ud//qfF4w4dOpRbb72VsWPHcujQIcrLy7nvvvuoqKjgiiuu4NChQwDMnDmTxsZGLr30Uvbv\n309EcMMNN1BZWdml/4OZHd/U9K60GGUymaitrW1R27x5M5/+9KcL1KP8uPnmmzn55JP5+7//+7w/\ndxr+v2alTtKa5r+mcCwlfQjIzMyOraQPAR2vjvxSmZlZT/AegJlZSjkAzMxSygFgZpZSDgAzs5Ry\nAHTSbbfdxllnncU555xDdXU1L7zwAgMHDuSNN9443Kb5D8LNnTuXvn37Ul1dzVlnncU3vvEN3n77\nbSD7oe9PfvITrrnmGqqrqxk6dCgVFRVUV1dTXV3NokWLiAhuvfVWBg8ezJAhQ6ipqWHTpk0FWXcz\nKw2lPQvojjtgxAioqXm/tmoVrF4NN97Y6Yf9r//6L5544gnWrl3LCSecwBtvvMGf/vSndpe7+OKL\nuffeewG45JJLWLBgAVdcccXh+++77z6Aw+cVWL9+/eH77r33Xv7zP/+Tl156iRNPPJGnnnqKr33t\na2zatInevXt3el3MLL1Kew9gxAi46KLsRh+ylxddlK13wa5du+jTpw8nnHACAH369KF///45L//e\ne+9x4MABTj311JyXuf322/npT396+NdCx44dyxe+8AUeeeSRjnXezCxR2gFQUwMLF2Y3+j/8YfZy\n4cKWewSdMHbsWHbs2MGQIUO4+uqr+Y//+I+clluwYAHV1dVUVVWxb98+vvrVr+a03O9//3sOHDjA\nJz7xiRb1TCbjw0Bm1mmlHQCQ3dhfdRXMmJG97OLGH+Dkk09mzZo1zJ49m759+3LxxRczd+7cVs+p\n27x28cUXs379en77298ybNgw7rzzzi71IyJ8fmQz67TSD4BVq+D++2H69Oxl0+GgLiorK2P06NH8\n+Mc/5t577+XRRx/l9NNP58033zzcZt++ffTp0+eoZSXx1a9+lWeeeSan5zrllFM46aST2L59e4v6\n2rVrGTp0aNdWxMxSq7QDoOmY/8KFcMst7x8O6mIIbNmyha1btx6+vX79ej72sY8xevRofvGLXwDZ\nc/Y+/PDD1Bxjj+PZZ5896pBOW6ZOncr3v/99Dh7Mnt/g17/+Nc8++yyXXHJJF9bEzNKstGcBrV7d\n8ph/02cCq1d36VDQW2+9xbXXXktDQwO9evXik5/8JLNnz6a8vJyrrrqKz3zmM0QE48eP59JLLz28\n3IIFC3j22Wc5dOgQAwYMYO7cuTk/57XXXsubb77JsGHDKCsr46Mf/ShLliyhoqJrJ7cxs/Rq9+eg\nJc0BLgB2R8TZSe1m4H8Be5JmP4iIJ5P7bgKuBBqB70fEsqQ+HvhnoAz4eUTMaq9zaf056ELy/9fs\n+NedPwc9FxjfSv3uiKhO/po2/kOBScBZyTL/IqlMUhlwH/BlYCjwraStmZkVSLuHgCLiGUkDc3y8\nCcD8iPgj8IqkbcDI5L5tEbEdQNL8pO1vOtxjMzPrFl35EPh7kl6WNEdS0zeaqoAdzdrUJbVj1Y8i\naYqkWkm1e/bsaa2JmZl1g84GwP3AJ4BqYBfwT0m9tUnp0Ub96GLE7IjIRESmb9++rT55MZ/G8njm\n/6tZunQqACLidxHRGBGHgJ/x/mGeOuCMZk0HADvbqHdY79692bt3rzdW3Swi2Lt3r39XyCxFOjUN\nVFK/iNiV3PwbYGNyfSnw75LuAvoDg4EXye4BDJY0CKgn+0FxpyawDxgwgLq6Onx4qPv17t2bAQMG\nFLobZpYn7QaApHnAaKCPpDrgR8BoSdVkD+O8CnwXICI2SVpI9sPd94BrIqIxeZzvAcvITgOdExGd\n+hGb8vJyBg0a1JlFzcysmXa/B1BIrX0PwMzM2tad3wMwM7MS5AAwM0spB4CZWUo5AMzMUsoBYGaW\nUg4AM7OUcgCYmaWUA8DMLKUcAGZmKeUAMDNLKQeAmVlKOQDMzFLKAWBmllIOADOzlHIAmJmllAPA\nzCylHABmZinlADAzSykHgJlZSjkAzMxSqt0AkDRH0m5JG5vVTpO0XNLW5PLUpC5J90jaJullSZ9t\ntszkpP1WSZN7ZnXMzCxXuewBzAXGH1GbBqyIiMHAiuQ2wJeBwcnfFOB+yAYG8CPg88BI4EdNoWFm\nZoXRbgBExDPAviPKE4AHk+sPAhOb1R+KrOeBSkn9gHHA8ojYFxFvAss5OlTMzCyPOvsZwEciYhdA\ncvnhpF4F7GjWri6pHat+FElTJNVKqt2zZ08nu2dmZu3p7g+B1Uot2qgfXYyYHRGZiMj07du3Wztn\nZmbv62wA/C45tENyuTup1wFnNGs3ANjZRt3MzAqkswGwFGiayTMZWNKsfnkyG+hcYH9yiGgZMFbS\nqcmHv2OTmpmZFUiv9hpImgeMBvpIqiM7m2cWsFDSlcDrwDeT5k8CXwG2AW8DVwBExD5JM4DVSbtb\nIuLID5bNzCyPFNHqofiikMlkora2ttDdMDM7rkhaExGZ9tr5m8BmZinlADAzSykHgJlZSjkAzMxS\nygFgZpZSDgAzs5RyAJiZpZQDwMwspRwAZmYp5QAwM0spB4CZWUo5AMzMUsoBYGaWUg4AM7OUcgCY\nmaWUA8DMLKUcAGZmKeUAMDNLKQeAmVlKOQDMzFKqSwEg6VVJGyStl1Sb1E6TtFzS1uTy1KQuSfdI\n2ibpZUmf7Y4VMDOzzumOPYCaiKhudgb6acCKiBgMrEhuA3wZGJz8TQHu74bnNjOzTuqJQ0ATgAeT\n6w8CE5vVH4qs54FKSf164PnNzCwHXQ2AAJ6StEbSlKT2kYjYBZBcfjipVwE7mi1bl9RakDRFUq2k\n2j179nSxe2Zmdiy9urj8qIjYKenDwHJJ/91GW7VSi6MKEbOB2QCZTOao+83MrHt0KQAiYmdyuVvS\n48BI4HeS+kXEruQQz+6keR1wRrPFBwA7u/L81j0Wr6vnzmVb2NlwkP6VFUwddyYThx+1c2ZmJabT\nh4AknSTpQ03XgbHARmApMDlpNhlYklxfClyezAY6F9jfdKjICmfxunpuemwD9Q0HCaC+4SA3PbaB\nxevqC90162aL19UzatZKBk37JaNmrfQYW5f2AD4CPC6p6XH+PSJ+JWk1sFDSlcDrwDeT9k8CXwG2\nAW8DV3Thua2b3LlsCwffbWxRO/huI3cu2+K9gBLSFPRNY90U9IDHuYQ07c1/8KOf/Fwu7TsdABGx\nHfhMK/W9wHmt1AO4prPPZz1jZ8PBDtXt+OSgL31Hhnwu/E3glOtfWdGhuh2fHPSlr7WQb48DIOWm\njjuTivKyFrWK8jKmjjuzQD2ynuCgL32dCXMHQMpNHF7FzAuHUVVZgYCqygpmXjjMhwVKjIO+9HUm\nzLv6PQArAROHV3mDX+KaxtfTffPgjjtgxAioqXm/tmoVrF4NN97YY087ddyZHf4MwAFQDAr0grE8\nK/A4O+jzZMQIuOgiWLgwO9arVr1/uwc1D/lc59f7EFAxaHrBrFqVvd30ghkxorD9su7lcU6Hmprs\nxv6ii+CHP2wZBj1s4vAqnps2hj/9dtuaXNo7AIpBAV8wlkce5/SoqYGrroIZM7KXRTrGDoBicZy8\nYKyLPM7psGoV3H8/TJ+evWza6ysyDoBicZy8YKyLPM6lr/kx/1tueX+vrwjH2gFQDI6jF4x1gcc5\nHVavbnlor+nQ3+rVhe1XKxwAxeA4esF0mzvuOHrDt2pVtl6qPM5ZpT7ON9549KG9mprinNEXEUX7\n97nPfS57/rCVKyNuvz2shKxcGdGnT/aytdtWGjzOBQHURg7b2OLfA/BUudLkGTHp4HEuasUdADt3\n+gVTyjwjJh08zkWruANg1y6/YEqZZ8Skg8e5aBV3APTr5xdMqfKMmHQo1Din8cPnTijuAOjfP78b\nBr9o8qeQM2I8zvlTqHH2z27kJpdPigv1l/dZQJ6xkA4e53RoGtfp09MxvrfffngdyXEWUME38m39\nHQ6AfCrQi+bxtXXxhZkrYuA/PBFfmLkiHl9bl5fnbf6iOSwN0249zukY5+nTs5u56dPz+rQFGedm\nb2RyDYDiPgRUCAWYsdB0Ls/6hoME75+we/G6+h5/7tTuKnucS3+cC/Thc8HGudmU2zOgfy6L5D0A\nJI2XtEXSNknT8v387SrAi6atE3b3uLTO0/Y4l/Y4F3CSQcHH+aqr+DD0y6V5XgNAUhlwH/BlYCjw\nLUlD89mHNhXoRVPwE3anbZ62x7n0x7mAkwwKOs7JG5vd5HZOmHzvAYwEtkXE9oj4EzAfmJDnPhxb\ngV40BT9hd9rmaXucS3+cC/h7PAUb52ZvbHbAzlwWyXcAVAE7mt2uS2rFoUAvmoKesDuN8/E9zukY\n5wIp2Dgf+cYmB/kOALVSixYNpCmSaiXV7tmzJ0/dKqyJw6uYeeEwqiorEFBVWcHMC4fl5/ytafyF\nygLxOKdDwca5tTc27VBEtN+qm0j6C+DmiBiX3L4JICJmttY+k8lEbW1t3vpnZlYKJK2JiEx77fK9\nB7AaGCxpkKQPApOApXnug5mZAb3y+WQR8Z6k7wHLgDJgTkRsymcfzMwsK68BABARTwJP5vt5zcys\nJX8T2MwspRwAZmYplddZQB0l6Q9AHr4/XVT6AG8UuhN55nVOB69z/nwsIvq21yjvnwF00JZcpjKV\nEkm1XufS53VOh2JfZx8CMjNLKQeAmVlKFXsAzC50BwrA65wOXud0KOp1LuoPgc3MrOcU+x6AmZn1\nkKINgKI/c1g3k3SGpFWSNkvaJOm6QvcpXySVSVon6YlC9yUfJFVKWiTpv5Px/otC96knSboheU1v\nlDRPUu9C96knSJojabekjc1qp0laLmlrcnlqIft4pKIMgKI/c1jPeA/4u4j4NHAucE0K1rnJdcDm\nQncij/4Z+FVEfAr4DCW87pKqgO8DmYg4m+xvgE0qbK96zFxg/BG1acCKiBgMrEhuF42iDACK/cxh\nPSAidkXE2uT6H8huFIrnZDk9RNIA4Hzg54XuSz5IOgX4IvAAQET8KSIaCturHtcLqJDUCziRHM9W\ndbyJiGeAfUeUJwAPJtcfBCbmtVPtKNYAKO4zh/UwSQOB4cALhe1JXvwf4EbgUKE7kicfB/YA/5Yc\n9vq5pJMK3ameEhH1wE+A18mep3Z/RDxV2F7l1UciYhdk3+QBHy5wf1oo1gBo98xhpUrSycCjwPUR\n8ftC96cnSboA2B0RawrdlzzqBXwWuD8ihgMHKLLDAt0pOeY9ARgE9AdOknRpYXtlTYo1AOqAM5rd\nHkCJ7jY2J6mc7Mb/kYh4rND9yYNRwNckvUr2MN8YSQ8Xtks9rg6oi4imvbtFZAOhVH0JeCUi9kTE\nu8BjwBcK3Kd8+p2kfgDJ5e4C96eFYg2A1J05TJLIHhfeHBF3Fbo/+RARN0XEgIgYSHaMV0ZESb87\njIjfAjskNZ0h/DzgNwXsUk97HThX0onJa/w8SvhD71YsBSYn1ycDSwrYl6MU5Y/BpfTMYaOAy4AN\nktYntR8kJ9Cx0nIt8Ejy5mY7cEWB+9NjIuIFSYuAtWRnuq2jyL8d21mS5gGjgT6S6oAfAbOAhZKu\nJBuG3yxcD4/mbwKbmaVUsR4CMjOzHuYAMDNLKQeAmVlKOQDMzFLKAWBmllIOADOzlHIAmJmllAPA\nzCyl/j/e9eb5acD96QAAAABJRU5ErkJggg==\n",
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x11314b290>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -585,19 +487,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "04/12/2017\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import datetime\n",
     "today = datetime.date.today()\n",
@@ -606,61 +500,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "data[(data[\"shop\"]==\"SUBITO.IT\") & (data[\"keyword\"]==\"DVB-T\")][[\"shop\",\"keyword\",\"risultato\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>shop</th>\n",
-       "      <th>keyword</th>\n",
-       "      <th>risultato</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>SUBITO.IT</td>\n",
-       "      <td>DVB-T</td>\n",
-       "      <td>291</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>SUBITO.IT</td>\n",
-       "      <td>DVB-T</td>\n",
-       "      <td>292</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>53</th>\n",
-       "      <td>SUBITO.IT</td>\n",
-       "      <td>DVB-T</td>\n",
-       "      <td>293</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         shop keyword  risultato\n",
-       "13  SUBITO.IT   DVB-T        291\n",
-       "33  SUBITO.IT   DVB-T        292\n",
-       "53  SUBITO.IT   DVB-T        293"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'shop': 'EURONICS', 'date': '30/11/17', 'keyword': 'DVB-T2 HEVC', 'url': 'https://www.euronics.it/acquistaonline/tv-led/cat110016/?q=DVB-T2 HEVC', 'risultato': 183}\n"
+     ]
     }
    ],
    "source": [
-    "data[(data[\"shop\"]==\"SUBITO.IT\") & (data[\"keyword\"]==\"DVB-T\")][[\"shop\",\"keyword\",\"risultato\"]]"
+    "post_data = {\n",
+    "    'shop': \"EURONICS\",\n",
+    "    'date': \"30/11/17\",\n",
+    "    'url': 'https://www.euronics.it/acquistaonline/tv-led/cat110016/?q=DVB-T2 HEVC',\n",
+    "    'risultato': 188,\n",
+    "    'keyword':\"DVB-T2 HEVC\"\n",
+    "}\n",
+    "print post_data\n",
+    "if not posts.find_one(post_data ):\n",
+    "    result = posts.insert_one(post_data)\n",
+    "  "
    ]
   },
   {
