Modifica report ed estrazione dati

--- a/tvMarketMonitoring.ipynb
+++ b/tvMarketMonitoring.ipynb
@@ -149,11 +149,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DVB-T2 38\n",
+      "DVB-T 318\n",
+      "HEVC 92\n",
+      "DVB-T2 HEVC 0\n"
+     ]
+    }
+   ],
    "source": [
     "shop=\"kijiji.it\"\n",
     "selector=\"body > div.content.left-rail.srp > div.main-container > div.main > div.srp-hed > div > h2\"\n",
@@ -184,11 +195,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DVB-T 87\n",
+      "DVB-T2 81\n",
+      "HEVC 34\n",
+      "DVB-T2 HEVC 20\n"
+     ]
+    }
+   ],
    "source": [
     "shop=\"PREZZOFORTE\"\n",
     "selector=\"#col_prodotti_numero > span.lista_prodotti_numero_prodotti\"\n",
@@ -219,11 +241,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DVB-T2 173\n",
+      "DVB-T 2\n",
+      "DVB-T2 HEVC 168\n",
+      "HEVC 170\n"
+     ]
+    }
+   ],
    "source": [
     "selector=\"#productList > div:nth-of-type(1) > section > div > b\"\n",
     "shop=\"EURONICS\"\n",
@@ -254,11 +287,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'date': '18/12/17', 'url': 'https://it.aliexpress.com/wholesale?spm=a2g0y.search0104.1.1.kasRbE&SearchText=dvb-t2', 'shop': 'Aliexpress', 'keyword': 'DVB-T2', 'risultato': u'2,065'}\n",
+      "{'shop': 'Aliexpress', 'date': '18/12/17', 'keyword': 'DVB-T', 'url': 'https://it.aliexpress.com/wholesale?catId=0&SearchText=dvb-t', 'risultato': u'3,501'}\n",
+      "{'shop': 'Aliexpress', 'date': '18/12/17', 'keyword': 'DVB-T2 HEVC', 'url': 'https://it.aliexpress.com/wholesale?catId=0&initiative_id=SB_20171129054255&SearchText=dvb-t2++hevc', 'risultato': u'48'}\n",
+      "{'shop': 'Aliexpress', 'date': '18/12/17', 'keyword': 'HEVC', 'url': 'https://it.aliexpress.com/wholesale?catId=0&SearchText=hevc', 'risultato': u'331'}\n"
+     ]
+    }
+   ],
    "source": [
     "url=\"https://it.aliexpress.com/wholesale?spm=a2g0y.search0104.1.1.kasRbE&SearchText=dvb-t2\"\n",
     "r  = requests.get(url)\n",
@@ -345,11 +389,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DVB-T2 165\n",
+      "HEVC 88\n",
+      "DVB-T 301\n",
+      "DVB-T2 HEVC 51\n"
+     ]
+    }
+   ],
    "source": [
     "url=\"https://www.subito.it/annunci-italia/vendita/audio-video/?q=dvb-t2\"\n",
     "selector='#template_content > main > div.subcontent > div.main > div.listing > ul.list_link.large > li:nth-of-type(1)'\n",
@@ -380,11 +435,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HEVC 36\n",
+      "DVB-T 169\n",
+      "DVB-T2 814\n"
+     ]
+    }
+   ],
    "source": [
     "shop=\"eprice.it\"\n",
     "selector='#breadcrumb > span.numRes'\n",
@@ -511,19 +576,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'shop': 'EURONICS', 'date': '30/11/17', 'keyword': 'DVB-T2 HEVC', 'url': 'https://www.euronics.it/acquistaonline/tv-led/cat110016/?q=DVB-T2 HEVC', 'risultato': 183}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "post_data = {\n",
     "    'shop': \"EURONICS\",\n",
