--- a/tvMarketMonitoring.ipynb
+++ b/tvMarketMonitoring.ipynb
@@ -153,7 +153,7 @@
      "output_type": "stream",
      "text": [
       "DVB-T2 37\n",
-      "DVB-T 327\n",
+      "DVB-T 317\n",
       "HEVC 103\n",
       "DVB-T2 HEVC 0\n"
      ]
@@ -196,10 +196,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DVB-T 87\n",
-      "DVB-T2 82\n",
-      "HEVC 36\n",
-      "DVB-T2 HEVC 21\n"
+      "DVB-T 84\n",
+      "DVB-T2 79\n",
+      "HEVC 30\n",
+      "DVB-T2 HEVC 18\n"
      ]
     }
    ],
@@ -284,10 +284,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'date': '20/12/17', 'url': 'https://it.aliexpress.com/wholesale?spm=a2g0y.search0104.1.1.kasRbE&SearchText=dvb-t2', 'shop': 'Aliexpress', 'keyword': 'DVB-T2', 'risultato': u'2,071'}\n",
-      "{'shop': 'Aliexpress', 'date': '20/12/17', 'keyword': 'DVB-T', 'url': 'https://it.aliexpress.com/wholesale?catId=0&SearchText=dvb-t', 'risultato': u'3,520'}\n",
-      "{'shop': 'Aliexpress', 'date': '20/12/17', 'keyword': 'DVB-T2 HEVC', 'url': 'https://it.aliexpress.com/wholesale?catId=0&initiative_id=SB_20171129054255&SearchText=dvb-t2++hevc', 'risultato': u'46'}\n",
-      "{'shop': 'Aliexpress', 'date': '20/12/17', 'keyword': 'HEVC', 'url': 'https://it.aliexpress.com/wholesale?catId=0&SearchText=hevc', 'risultato': u'338'}\n"
+      "{'date': '05/01/18', 'url': 'https://it.aliexpress.com/wholesale?spm=a2g0y.search0104.1.1.kasRbE&SearchText=dvb-t2', 'shop': 'Aliexpress', 'keyword': 'DVB-T2', 'risultato': u'2,091'}\n",
+      "{'shop': 'Aliexpress', 'date': '05/01/18', 'keyword': 'DVB-T', 'url': 'https://it.aliexpress.com/wholesale?catId=0&SearchText=dvb-t', 'risultato': u'3,550'}\n",
+      "{'shop': 'Aliexpress', 'date': '05/01/18', 'keyword': 'DVB-T2 HEVC', 'url': 'https://it.aliexpress.com/wholesale?catId=0&initiative_id=SB_20171129054255&SearchText=dvb-t2++hevc', 'risultato': u'48'}\n",
+      "{'shop': 'Aliexpress', 'date': '05/01/18', 'keyword': 'HEVC', 'url': 'https://it.aliexpress.com/wholesale?catId=0&SearchText=hevc', 'risultato': u'342'}\n"
      ]
     }
    ],
@@ -384,10 +384,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DVB-T2 173\n",
-      "HEVC 86\n",
-      "DVB-T 300\n",
-      "DVB-T2 HEVC 50\n"
+      "DVB-T2 166\n",
+      "HEVC 84\n",
+      "DVB-T 304\n",
+      "DVB-T2 HEVC 52\n"
      ]
     }
    ],
@@ -428,9 +428,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HEVC 109\n",
-      "DVB-T 125\n",
-      "DVB-T2 774\n"
+      "HEVC 44\n",
+      "DVB-T 123\n",
+      "DVB-T2 776\n"
      ]
     }
    ],
@@ -454,9 +454,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python2.7/site-packages/ipykernel_launcher.py:2: DeprecationWarning: remove is deprecated. Use delete_one or delete_many instead.\n",
+      "  \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[u'ok', u'n']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#list(posts.remove({ \"shop\": \"Aliexpress\" }))\n",
     "list(posts.remove({ \"keyword\": \"Tutti televisori\" }))"
@@ -464,9 +483,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2018-01-05T09:11:41.151+0100\twriting MonitoraggioTV.posts to \r\n",
+      "2018-01-05T09:11:41.154+0100\tdone dumping MonitoraggioTV.posts (400 documents)\r\n"
+     ]
+    }
+   ],
    "source": [
     "!mongodump --db MonitoraggioTV --out=dbDump/\n",
     "import pandas as pd\n",
@@ -489,9 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -568,9 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
